        - eoi() replaces done(), alternatively the eoi manipulator can be
                inserted into DecryptBuf's std::ostream

  * DigestBuf:
        - reset() replaces open()
        - eoi() replaces close(), alternatively the eoi manipulator can be
                inserted into DigestBuf's std::ostream

  * EncryptBuf:
        - Discontinued:
            setKey()
            setIV()

  * HMacBuf:
        - reset() replaces open() 
        - eoi()   replaces close(), alternatively the eoi manipulator can be
                inserted into HMacBuf's std::ostream

  * IFdStreambuf:
        - reset() replaces open() 

  * IFilterStreambuf:
        - overriding members no longer are declared `final'
        - pbackfail()  inserts (if storage space is available) a character at
            the beginning of the object's internally used buffer.

  * IOStreambuf:
        - xsputn() replaces pXsputn() 
        - reset()  replaces open()

  * IRandStream expects a size_t seed (used to be: long seed);

  * OFdStreambuf:
        - reset() replaces open() 
        - eoi()   replaces close(), alternatively the eoi manipulator can be
                inserted into OFdStreambuf's std::ostream

  * OFilterStreambuf:
        - reset() replaces open()
        - close(): discontinued

  * OFoldStream:
        - constructor parameter `std::string const &fname' replaces 
                                `char const *fname'
        - reset() replaces open()
        - close() discontinued

  * OFoldStreambuf:
        - constructor parameter `std::string const &fname' replaces 
                                `char const *fname'

  * OHexStreambuf:
        - added an extra parameter to its constructor: std::string const
            &separator, by default initialized to an empty string. It
            defines the separator inserted between hexadecimal character
            values. 
        - added members `separator' to redefine or reset the currently used
            separator. 