@@ -1,4 +1,0 @@
-#include "glob.ih"
-
-void Glob::verify() const
-{}
