@@ -1,6 +1,6 @@
 #include "process.ih"
 
-Process::Process(size_t mode, std::string const &command)
+Process::Process(IOMode mode, std::string const &command)
 :
-    Process(iomode(mode), NO_PATH, 0, 200, command)
+    Process(mode, NO_PATH, 0, 200, command)
 {}
