@@ -1,6 +1,6 @@
 #include "process.ih"
 
-Process::Process(size_t mode, ProcessType type, std::string const &command)
+Process::Process(IOMode mode, ProcessType type, std::string const &command)
 :
-    Process(iomode(mode), type, 0, 200, command)
+    Process(mode, type, 0, 200, command)
 {}
