@@ -1,7 +1,7 @@
 #include "process.ih"
 
-Process::Process(size_t mode, ProcessType processType, size_t timeLimit, 
+Process::Process(IOMode mode, ProcessType processType, size_t timeLimit, 
                  string const &command)
 :
-    Process(iomode(mode), processType, timeLimit, 200, command)
+    Process(mode, processType, timeLimit, 200, command)
 {}
